1. Читаем файл конфигурации [#498787]

--- a/data/pair_with_comment.properties
+++ b/data/pair_with_comment.properties
@@ -1,9 +1,9 @@
-## Comment one
+# Comment one
 
 leader=Petr Arsentev
 
-## Comment two
+# Comment two
 mentor=Rail Shamsemuhametov
 
-## Comment three
+# Comment three
 student=Ruslan Davydov
